# relay

./: .env.sample  Cargo.toml  Dockerfile
.github/workflows/: docker.yaml
.sqlx/: query-0114e2de30e02fd9382f9f1ecbb9e154b50c7e74cb94c7ec1b5f3de49dbf2484.json  query-61091f231fcf0682f6c0d968074ec1f3b873962dab51f72d911846fc732453d5.json  query-72ac2d3b53d34f4fba26aa138e78126bce739f43d44e31befb94f9686ceef46e.json  query-904b3c7467071dba0a1b6538838550f748cbe5515445abdc751f7bed6c4bdb61.json  query-966d3fdbfb6bf99e0856dad03ca36badbdd9150b460d9cac82473175cc788680.json  query-a65998b467e7dc1a1af4d6f4e64d6bcfbccf96c98e29b5e23c5e580a53ca30ee.json  query-b706c84bb4ae119d0c26511da71683551265d420bd82c0a711c911a7af7e0844.json  query-f255dc0e39632dcb66fae7eb4edec7c3648c25ff2d8f4fcd178e920f794a2160.json
migrations/: 20250416034848_create_users_table.sql  20250417053023_create_device_table.sql  20250417072817_create_sms_table.sql
src/: config.rs  db.rs  errors.rs  main.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs  device.rs  mod.rs  sms.rs
src/models/: device.rs  mod.rs  sms.rs  user.rs
