[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
async-trait = "0.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
